force-app/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <label>Applicant</label>
    <nameField>
        <displayFormat>APID-{0000}</displayFormat>
        <label>Applicants ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>