force-app/default/objects/Applicant__c/fields/ActiveApplicant__c.field-meta.xml
<CustomField>
    <fullName>ActiveApplicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Applicant</label>
    <type>Checkbox</type>
</CustomField>