force-app/default/objects/Applicant__c/fields/DrivingLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>DrivingLicenseNumber__c</fullName>
    <externalId>true</externalId>
    <label>Driving License Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>