force-app/default/objects/Applicant__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email Id</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>