force-app/default/objects/Applicant__c/fields/Favorite_color__c.field-meta.xml
<CustomField>
    <fullName>Favorite_color__c</fullName>
    <label>Favorite color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>violet</fullName>
            </value>
            <value>
                <fullName>indigo</fullName>
            </value>
            <value>
                <fullName>blue</fullName>
            </value>
            <value>
                <fullName>green</fullName>
            </value>
            <value>
                <fullName>yellow</fullName>
            </value>
            <value>
                <fullName>orange</fullName>
            </value>
            <value>
                <fullName>red</fullName>
            </value>
            <value>
                <fullName>white</fullName>
            </value>
            <value>
                <fullName>black</fullName>
            </value>
            <value>
                <fullName>gold</fullName>
            </value>
            <value>
                <fullName>silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>