force-app/default/objects/Applicant__c/fields/List_of_Addresses__c.field-meta.xml
<CustomField>
    <fullName>List_of_Addresses__c</fullName>
    <label>List of Addresses</label>
    <type>TextArea</type>
</CustomField>