force-app/default/objects/Applicant__c/fields/MobileActive__c.field-meta.xml
<CustomField>
    <fullName>MobileActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MobileActive</label>
    <type>Checkbox</type>
</CustomField>