force-app/default/objects/Applicant__c/fields/MobileOperator__c.field-meta.xml
<CustomField>
    <fullName>MobileOperator__c</fullName>
    <label>MobileOperator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>