force-app/default/objects/Applicant__c/fields/Pan_Card__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card__c</fullName>
    <label>Pan Card</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>