force-app/default/objects/Applicant__c/fields/Personal_Website_Address__c.field-meta.xml
<CustomField>
    <fullName>Personal_Website_Address__c</fullName>
    <label>Personal Website Address</label>
    <type>Url</type>
</CustomField>