force-app/default/objects/Applicant__c/fields/Police_Verification__c.field-meta.xml
<CustomField>
    <fullName>Police_Verification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Police Verification</label>
    <type>Checkbox</type>
</CustomField>