force-app/default/objects/Applicant__c/validationRules/gender_female_transgender_and_police_ver.validationRule-meta.xml
<ValidationRule>
    <fullName>gender_female_transgender_and_police_ver</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
OR( ISPICKVAL(Gender__c ,&apos;Female&apos;) , 
 ISPICKVAL( Gender__c  ,&apos;Transgender&apos;) 

)
,
Police_Verification__c = true)</errorConditionFormula>
    <errorMessage>Prevent applicant if gender is male and female and police verification is true!!!!!!!!</errorMessage>
</ValidationRule>