force-app/default/objects/Applicant__c/validationRules/gender_month_age.validationRule-meta.xml
<ValidationRule>
    <fullName>gender_month_age</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Age__c  &gt;=  20 ,

Age__c  &lt;=  30,

 ISPICKVAL( Gender__c ,&apos; female&apos;),

 MONTH( DOB__c ) = 11 )</errorConditionFormula>
    <errorMessage>Prevent applicant if gender is  female and dob is november and age is between 20 and 30!!!!!!!!</errorMessage>
</ValidationRule>