force-app/default/objects/Applicant__c/validationRules/Last_name_never_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_name_never_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Last_Name__c)</errorConditionFormula>
    <errorMessage>Last name cannot be empty</errorMessage>
</ValidationRule>