force-app/default/objects/Applicant__c/validationRules/Last_name_never_Blank_for_agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_name_never_Blank_for_agent</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK( Last_Name__c), $Profile.Name  = &apos;Agent&apos;)</errorConditionFormula>
    <errorMessage>Last name cannot be empty for Agent profile</errorMessage>
</ValidationRule>