force-app/default/objects/Applicant__c/validationRules/Prevent_age_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_age_less_than_18</fullName>
    <active>false</active>
    <errorConditionFormula>Age__c   &lt;= 18</errorConditionFormula>
    <errorMessage>Applicants with age less than 18 are prevented</errorMessage>
</ValidationRule>