force-app/default/objects/Applicant__c/validationRules/Prevent_dob_August.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_dob_August</fullName>
    <active>false</active>
    <errorConditionFormula>MONTH( DOB__c )  = 8</errorConditionFormula>
    <errorMessage>Applicants with dob august are prevented</errorMessage>
</ValidationRule>