force-app/default/objects/Applicant__c/validationRules/Prevent_Male_Applicant.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Male_Applicant</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Gender__c , &apos;Male&apos;)</errorConditionFormula>
    <errorMessage>Applicants with Male Gender not allowed</errorMessage>
</ValidationRule>