force-app/default/objects/Applicant__c/validationRules/PreventSpecialSymbolWithFirstNames.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventSpecialSymbolWithFirstNames</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX (First_Name__c, &quot;^[a-zA-Z0-9_]*$&quot;))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>Prevent special  symbol................................</errorMessage>
</ValidationRule>