force-app/default/objects/Applicant__c/validationRules/PreventSpecialSymbolWithLastNames.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventSpecialSymbolWithLastNames</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX (Last_Name__c, &quot;^[a-zA-Z0-9_]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Prevent special  symbol................................</errorMessage>
</ValidationRule>