force-app/default/objects/Applicant__c/validationRules/Proper_Names.validationRule-meta.xml
<ValidationRule>
    <fullName>Proper_Names</fullName>
    <active>true</active>
    <errorConditionFormula>First_Name__c = Last_Name__c</errorConditionFormula>
    <errorMessage>First Name and Last Name should not be same</errorMessage>
</ValidationRule>