force-app/default/objects/Applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>yes_no_logo_voting__c</columns>
    <columns>gender_logo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>