force-app/default/objects/Applicant__c/listViews/Female.listView-meta.xml
<ListView>
    <fullName>Female</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>female</value>
    </filters>
    <label>Female</label>
</ListView>