force-app/default/objects/Applicant__c/listViews/formula.listView-meta.xml
<ListView>
    <fullName>formula</fullName>
    <columns>NAME</columns>
    <columns>Police_Verification__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>List_of_Addresses__c</columns>
    <filterScope>Everything</filterScope>
    <label>formula</label>
</ListView>