force-app/default/objects/Applicant__c/listViews/male_list.listView-meta.xml
<ListView>
    <fullName>male_list</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>male</value>
    </filters>
    <label>male list</label>
</ListView>