force-app/default/objects/Applicant__c/listViews/new_applicant_list.listView-meta.xml
<ListView>
    <fullName>new_applicant_list</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>new applicant list</label>
</ListView>